--- a/DershaneTakipSistemi/Views/Odemes/Details.cshtml
+++ b/DershaneTakipSistemi/Views/Odemes/Details.cshtml
@@ -1,39 +1,37 @@
 ﻿@model DershaneTakipSistemi.Models.Odeme
 
 @{
-    ViewData["Title"] = "Öğrenci Detayları";
+    ViewData["Title"] = "Ödeme Detayları";
 }
 
 <h1>@ViewData["Title"]</h1>
-<div>
-<h4>Ödeme Bilgileri</h4>
-    <hr />
-    <dl class="row">
-         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Ogrenci)
-        </dt>
-        <dd class = "col-sm-10">
-         @* @Html.DisplayFor(model => model.Ogrenci.AdSoyad) // Eski hali *@
-            @Html.DisplayFor(model => model.Ogrenci.Ad) @Html.DisplayFor(model => model.Ogrenci.Soyad) @* Yeni hali *@
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Tutar)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Tutar)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OdemeTarihi)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OdemeTarihi)
-        </dd>
-       
-    </dl>
 
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-primary">Düzenle</a> | @* Buton stili ekledim *@
-    <a asp-action="Index" class="btn btn-primary">Listeye Geri Dön</a>
+    <h4>Ödeme Bilgileri</h4>
+    <hr />
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Ogrenci)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Ogrenci.Ad) @Html.DisplayFor(model => model.Ogrenci.Soyad)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Tutar)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Tutar)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.OdemeTarihi)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.OdemeTarihi)
+        </dd>
+    </dl>
 </div>
+<div class="mt-4">
+    <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-primary">Düzenle</a> |
+    <a asp-action="Index" class="btn btn-secondary">Listeye Geri Dön</a>
 </div>
 
