--- a/DershaneTakipSistemi/Views/Odemes/Edit.cshtml
+++ b/DershaneTakipSistemi/Views/Odemes/Edit.cshtml
@@ -1,46 +1,58 @@
 ﻿@model DershaneTakipSistemi.Models.Odeme
 
 @{
-    ViewData["Title"] = "Ödeme Bilgilerini Düzenle";
+    {
+        ViewData["Title"] = "Ödeme Bilgilerini Düzenle";
+    }
 }
 
 <h1>@ViewData["Title"]</h1>
+
+<h4>Ödeme Bilgileri</h4>
 <hr />
 <div class="row">
-    <h4>Ödeme Bilgileri</h4>
-    <div class="col-md-4">
+    <div class="col-md-8">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group mb-3">
-                <label asp-for="Tutar" class="control-label"></label>
-                <input asp-for="Tutar" class="form-control" />
-                <span asp-validation-for="Tutar" class="text-danger"></span>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group mb-3">
+                        <label asp-for="OgrenciId" class="control-label">Öğrenci</label>
+                        <select asp-for="OgrenciId" class="form-control" asp-items="ViewBag.OgrenciId">
+                        </select>
+                        <span asp-validation-for="OgrenciId" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group mb-3">
+                        <label asp-for="Tutar" class="control-label"></label>
+                        <input asp-for="Tutar" class="form-control" />
+                        <span asp-validation-for="Tutar" class="text-danger"></span>
+                    </div>
+                </div>
             </div>
-            <div class="form-group mb-3">
-                <label asp-for="OdemeTarihi" class="control-label"></label>
-                <input asp-for="OdemeTarihi" class="form-control" />
-                <span asp-validation-for="OdemeTarihi" class="text-danger"></span>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group mb-3">
+                        <label asp-for="OdemeTarihi" class="control-label"></label>
+                        <input asp-for="OdemeTarihi" class="form-control" />
+                        <span asp-validation-for="OdemeTarihi" class="text-danger"></span>
+                    </div>
+                </div>
             </div>
-            <div class="form-group mb-3">
-                <label asp-for="OgrenciId" class="control-label">Öğrenci</label>
-                <select asp-for="OgrenciId" class="form-control" asp-items="ViewBag.OgrenciId">
-                    @* Edit sayfasında genellikle boş seçenek eklemeyiz, direkt mevcut değer seçili gelir. *@
-                    @* İstersen yine de ekleyebilirsin: <option value="">-- Öğrenci Seçiniz --</option> *@
-                </select>
-                <span asp-validation-for="OgrenciId" class="text-danger"></span>
-            </div>
-            <div class="form-group mb-3">
+            <div class="form-group mt-4">
                 <input type="submit" value="Kaydet" class="btn btn-success" />
+                <a asp-action="Index" class="btn btn-secondary ms-2">Listeye Geri Dön</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index" class="btn btn-primary">Listeye Geri Dön</a>
-</div>
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    {
+    @{
+        { await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+    }
+    }
 }
