--- a/DershaneTakipSistemi/Views/Odemes/Index.cshtml
+++ b/DershaneTakipSistemi/Views/Odemes/Index.cshtml
@@ -6,44 +6,50 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<p>
-    <a asp-action="Create" class="btn btn-primary mb-3">Yeni Ödeme Ekle</a>
-</p>
+<div class="d-flex justify-content-between mb-3">
+    <p>
+        <a asp-action="Create" class="btn btn-primary">Yeni Ödeme Ekle</a>
+    </p>
+    <form asp-controller="Odemes" asp-action="ExportOdemelerToExcel" method="post">
+        <button type="submit" class="btn btn-success">
+            <i class="bi bi-file-earmark-excel-fill"></i> Excel'e Aktar
+        </button>
+    </form>
+</div>
 <table class="table table-striped table-hover table-bordered">
     <thead>
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Ogrenci)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Tutar)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.OdemeTarihi)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Ogrenci)
-            </th>
             <th>İşlemler</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Tutar)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OdemeTarihi)
-            </td>
+        @foreach (var item in Model)
+        {
+            <tr>
                 <td>
-                    @* @Html.DisplayFor(modelItem => item.Ogrenci.AdSoyad) // Eski hali *@
-                    @Html.DisplayFor(modelItem => item.Ogrenci.Ad) @Html.DisplayFor(modelItem => item.Ogrenci.Soyad) @* Yeni hali *@
-                    @* VEYA daha kısası: @(item.Ogrenci.Ad + " " + item.Ogrenci.Soyad) *@
+                    @Html.DisplayFor(modelItem => item.Ogrenci.Ad) @Html.DisplayFor(modelItem => item.Ogrenci.Soyad)
                 </td>
-            <td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Tutar)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.OdemeTarihi)
+                </td>
+                <td>
                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-primary me-1">Düzenle</a>
                     <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-outline-info me-1">Detaylar</a>
                     <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-danger">Sil</a>
-            </td>
-        </tr>
-}
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
