--- a/DershaneTakipSistemi/Views/Shared/_Layout.cshtml
+++ b/DershaneTakipSistemi/Views/Shared/_Layout.cshtml
@@ -33,6 +33,10 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Odemes" asp-action="Index">Ödemeler</a>
                                 </li>
+                                 <li class="nav-item">
+                                    @* <-- YENİ EKLENEN LİNK *@
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Personels" asp-action="Index">Personel</a>
+                                 </li>
                                 <!-- ================================ -->
 					</ul>
 				</div>
